--- a/main.html
+++ b/main.html
@@ -8,6 +8,35 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="POST">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required>
+<label for="email">Email:</label>
+<input type="email" id="email" name="email" required>
+
+<label for="gender">Gender:</label>
+<input type="radio" id="gender" name="gender" value="male" required> Male
+<input type="radio" id="gender" name="gender" value="female" required> Female
+
+<label for="cars">Car Brands:</label>
+<select id="cars" name="cars" required>
+<option value="BMW">BMW</option>
+<option value="Audi">Audi</option>
+<option value="Mercedez">Mercedez</option>
+</select>
+
+<label for="carage">Car Age:</label>
+<input type="number" id="carage" name="carage" required>
+
+<label for="dop">Date of Purchase:</label>
+<input type="date" id="dop" name="dop" required>
+
+<label for="password">Password:</label>
+<input type="password" id="password" name="password" required>
+
+<button type="submit">Submit</button>
+
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
